# camel

./: .buildinfo  .codespell-ignore-words.txt  .env  .env.example  .env_template  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .style.yapf  1  2.py  AGENTS.md  BATCH_BROWSER_CODE_TOOLKIT_README.md  CLAUDE.md  CNAME  CONTRIBUTING.md  FEATURE_MCP_CODE_EXECUTION.md  INSTALLATION.md  LICENSE  MCP_CODE_EXECUTION_FILES.md  Makefile  My_playground_Boer.ipynb  PR_DESCRIPTION.md  PR_DESCRIPTION_fix_anthropic.md  README.html  README.ja.md  README.md  README.zh.md  SECURITY.md  \  _rediraffe_redirected.json  api_key  batch_browser_code_toolkit.py  camel.agents.html  camel.agents.tool_agents.html  camel.benchmarks.html  camel.bots.discord.html  camel.bots.html  (+94 more)
Zoomtoolkit/: CHANGELOG.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml  requirements.txt
Zoomtoolkit/camel/toolkits/: __init__.py
trainers/: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Notice.txt  README.md  pyproject.toml  requirements-npu.txt  requirements.txt  requirements_sglang.txt  setup.py
trainers/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
trainers/.github/workflows/: checkpoint_converter.yml  dataset.yml  doc.yml  e2e_dapo.yml  e2e_eval_aime24.yml  e2e_ppo_trainer.yml  e2e_ppo_trainer_megatron.yml  e2e_sft.yml  e2e_spin.yml  e2e_sppo.yml  kernels.yml  model.yml  pre-commit-full.yml  pre-commit.yml  ray_cpu_test.yml  ray_gpu_test.yml  sandbox.yml  sanity.yml  scorecard.yml  secrets_scan.yml  sgl.yml  utils_cpu_test.yml  utils_gpu_test.yml  vllm.yml
trainers/docker/: Apptainerfile.rocm  Dockerfile.awsefa  Dockerfile.ngc.vllm  Dockerfile.ngc.vllm0.8  Dockerfile.ngc.vllm0.8.sagemaker  Dockerfile.rocm  Dockerfile.sglang  Dockerfile.vemlp.vllm.te  Dockerfile.vllm.sglang.megatron
trainers/docs/: Makefile  README.md  README_vllm0.7.md  README_vllm0.8.md  conf.py  hybrid_flow.rst  index.rst  requirements-docs.txt  single_controller.rst
trainers/docs/advance/: checkpoint.rst  dpo_extension.rst  fsdp_extension.rst  megatron_extension.rst  placement.rst  ppo_lora.rst  rope.rst
trainers/docs/algo/: baseline.md  dapo.md  grpo.md  opo.md  spin.md  sppo.md
trainers/docs/amd_tutorial/: amd_build_dockerfile_page.rst  amd_vllm_page.rst
trainers/docs/api/: data.rst  single_controller.rst  trainer.rst  utils.rst
trainers/docs/ascend_tutorial/: ascend_quick_start.rst
trainers/docs/examples/: config.rst  gsm8k_example.rst  multi_modal_example.rst  ppo_code_architecture.rst  sandbox_fusion_example.rst
trainers/docs/faq/: faq.rst
trainers/docs/perf/: device_tuning.rst  perf_tuning.rst
trainers/docs/preparation/: prepare_data.rst  reward_function.rst
trainers/docs/sglang_multiturn/: multiturn.rst  sandbox_fusion.rst  search_tool_example.rst
trainers/docs/start/: install.rst  multinode.rst  quickstart.rst  ray_debug_tutorial.rst
trainers/docs/workers/: fsdp_workers.rst  megatron_workers.rst  ray_trainer.rst  sglang_worker.rst
trainers/examples/data_preprocess/: aime2024_multiturn_w_tool.py  dapo_multiturn_w_tool.py  full_hh_rlhf.py  geo3k.py  gsm8k.py  gsm8k_multiturn_w_tool.py  hellaswag.py  math_dataset.py  multiturn.py  preprocess_search_r1_dataset.py
trainers/examples/generation/: run_deepseek7b_mutli_node.sh  run_deepseek_v2_lite_math.sh
trainers/examples/grpo_trainer/: README.md  run_deepseek7b_llm.sh  run_deepseek7b_llm_math.sh  run_deepseek7b_llm_math_megatron.sh  run_deepseek7b_llm_seq_balance.sh  run_moonlight16b_math_megatron.sh  run_qwen2-7b.sh  run_qwen2-7b_math.sh  run_qwen2-7b_math_megatron.sh  run_qwen2-7b_seq_balance.sh  run_qwen2-7b_seq_balance_math_megatron.sh  run_qwen2-7b_sgl_megatron.sh  run_qwen2_5-3b_gsm8k_grpo_lora.sh  run_qwen2_5-7b_math_megatron_diff_tp.sh  run_qwen2_5_vl-7b.sh  run_qwen3-236b_megatron.sh  run_qwen3-8b.sh  run_qwen3moe-30b_megatron.sh
trainers/examples/ppo_trainer/: README.md  naive_chat_scheduler.py  run_deepseek7b_llm.sh  run_deepseek7b_llm_modelscope.sh  run_deepseek7b_llm_pfppo.sh  run_deepseek7b_llm_sandbox_fusion.sh  run_deepseek7b_llm_sp2.sh  run_deepseek_full_hh_rlhf.sh  run_deepseek_math_gsm8k_megatron.sh  run_gemma.sh  run_moonlight16b_a3b_gsm8k_megatron.sh  run_qwen1.5_moe_a2.7b-gsm8k_megatron.sh  run_qwen2-7b_math_gsm8k_megatron.sh  run_qwen2-7b_rm.sh  run_qwen2-7b_rm_seq_balance.sh  run_qwen2-7b_seq_balance.sh  run_qwen2-7b_sglang_seq_balance.sh  run_qwen2.5-32b.sh
trainers/examples/ray/: tutorial.ipynb
trainers/examples/reinforce_plus_plus_trainer/: run_qwen2-7b_math_rf.sh  run_qwen2-7b_math_rf_baseline.sh
trainers/examples/remax_trainer/: run_qwen2.5-3b_seq_balance.sh  run_qwen2.5-7b_seq_balance.sh
trainers/examples/rloo_trainer/: run_qwen2-7b.sh
trainers/examples/sglang_multiturn/: README.md  run_qwen2.5-3b_gsm8k_multiturn.sh  run_qwen2.5-3b_gsm8k_multiturn_4xgpu.sh  run_qwen2.5-3b_megatron_gsm8k_multiturn.sh
trainers/examples/slurm/: ray_on_slurm.slurm
trainers/examples/split_placement/: README.md  main_ppo_split.py  run_deepseek7b_llm.sh  split_monkey_patch.py
trainers/recipe/: README.md
trainers/recipe/camelai/: build_env.py  camelai_ray_trainer.py  camelai_rl_trainer.py  env_dataset.py
trainers/recipe/dapo/: README.md  dapo_ray_trainer.py  main_dapo.py  prepare_dapo_data.sh  run_dapo_early_qwen2.5_32b.sh  run_dapo_qwen2.5_32b.sh  run_dapo_wo_ds_qwen2.5_32b.sh  test_dapo_7b.sh  test_dapo_7b_math.sh  test_dapo_7b_math_megatron.sh  test_dapo_qwen3_30b_math.sh
trainers/recipe/prime/: __init__.py  main_prime.py  prime_core_algos.py  prime_dp_rm.py  prime_fsdp_workers.py  prime_ray_trainer.py  run_prime_qwen.sh  run_prime_qwen_code.sh
trainers/recipe/r1/: README.md  data_process.py  main_eval.py  reward_score.py  run_r1_distill_qwen.sh
trainers/recipe/spin/: README.md  core_algos.py  dp_actor.py  fsdp_workers.py  main_spin.py  run_spin.sh  spin_trainer.py
trainers/scripts/: converter_hf_to_mcore.py  diagnose.py  install_vllm_sglang_mcore.sh  model_merger.py
trainers/tests/: kill_github_tests.sh  test_protocol.py
trainers/verl/: __init__.py  protocol.py
(+10384 files in other folders)
