[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "camel-ai"
version = "0.2.20a1"
authors = ["CAMEL-AI.org"]
description = "Communicative Agents for AI Society Study"
readme = "README.md"
keywords = [
    "communicative-ai",
    "ai-societies",
    "artificial-intelligence",
    "deep-learning",
    "multi-agent-systems",
    "cooperative-ai",
    "natural-language-processing",
    "large-language-models",
]
packages = [
    { include = "camel" },
]
license = "Apache License 2.0"
homepage = "https://www.camel-ai.org/"
repository = "https://github.com/camel-ai/camel"
documentation = "https://docs.camel-ai.org"

[tool.poetry.dependencies]
# Core dependencies
python = ">=3.10,<3.13"
numpy = "^1"
openai = "^1.59.7"
tiktoken = "^0.7.0"
colorama = "^0"
jsonschema = "^4"
protobuf = "^5"
pathlib = "^1.0.1"
docstring-parser = "^0.15"
pydantic = ">=1.9,<2.10"
eval-type-backport = "0.2.0"
curl_cffi = "0.6.2"
pandoc = "*"
httpx = ">=0.23.0,<0.27.3"
psutil = "^5.9.8"

# Model platforms
litellm = { version = "^1.38.1", optional = true }
mistralai = { version = "^1.1.0", optional = true }
reka-api = { version = "^3.0.8", optional = true }
anthropic = { version = "^0.42.0", optional = true }
cohere = { version = "^5.11.0", optional = true }
fish-audio-sdk = { version = "^2024.12.5", optional = true }
sglang = { version = "^0.4.0", optional = true }

# Huggingface ecosystem
transformers = { version = "^4", optional = true }
diffusers = { version = "^0.25.0", optional = true }
accelerate = { version = "^0.26.0", optional = true }
datasets = { version = "^3", optional = true }
torch = [
    { version = "^2", optional = true, markers = "platform_system != 'Darwin' or platform_machine == 'arm64'" },
    # Torch 2.2.1 is used on non-arm64 macOS systems.
    { version = "2.2.1", optional = true, markers = "platform_system == 'Darwin' and platform_machine != 'arm64'" }
]
soundfile = { version = "^0", optional = true }
sentencepiece = { version = "^0", optional = true }
opencv-python = { version = "^4", optional = true }

# Core RAG components
sentence-transformers = { version = "^3.0.1", optional = true }
qdrant-client = { version = "^1.9.0", optional = true }
pymilvus = { version = "^2.4.0", optional = true }
rank-bm25 = { version = "^0.2.2", optional = true }

# Storage solutions
neo4j = { version = "^5.18.0", optional = true }
nebula3-python = { version = "3.8.2", optional = true }
redis = { version = "^5.0.6", optional = true }
azure-storage-blob = { version = "^12.21.0", optional = true }
google-cloud-storage = { version = "^2.18.0", optional = true }
botocore = { version = "^1.35.3", optional = true }

# Document processing tools
beautifulsoup4 = { version = "^4", optional = true }
docx2txt = { version = "^0.8", optional = true }
PyMuPDF = { version = "^1.22.5", optional = true }
pdfplumber = { version = "^0.11.0", optional = true }
unstructured = { extras = ["all-docs"], version = "0.16.11", optional = true }
prance = { version = "^23.6.21.0", optional = true }
openapi-spec-validator = { version = "^0.7.1", optional = true }
pandasai = { version = "^2.3.0", optional = true }

# Media processing tools
pillow = ">=10.1.0,<11.0.0"
imageio = { extras = ["pyav"], version = "^2.34.2", optional = true }
pydub = { version = "^0.25.1", optional = true }
yt-dlp = { version = "^2024.11.4", optional = true }
ffmpeg-python = { version = "^0.2.0", optional = true }

# Web and API tools
wikipedia = { version = "^1", optional = true }
linkup-sdk = { version = "^0.2.1", optional = true }
duckduckgo-search = { version = "^6.3.5", optional = true }
newspaper3k = { version = "^0.2.8", optional = true }
wolframalpha = { version = "^5.0.0", optional = true }
pyowm = { version = "^3.3.0", optional = true }
googlemaps = { version = "^4.10.0", optional = true }
requests_oauthlib = { version = "^1.3.1", optional = true }
firecrawl-py = { version = "^1.0.0", optional = true }
apify_client = { version = "^1.8.1", optional = true }
tavily-python = { version = "^0.5.0", optional = true }
asknews = { version = "^0.7.54", optional = true }
dappier = { version = "^0.3.3", optional = true }
sympy = { version = "^1.13.3", optional = true }

# Communication platform tools
slack-sdk = { version = "^3.27.2", optional = true }
slack-bolt = { version = "^1.20.1", optional = true }
pygithub = { version = "^2.3.0", optional = true }
pyTelegramBotAPI = { version = "^4.18.0", optional = true }
"discord.py" = { version = "^2.3.2", optional = true }
notion-client = { version = "^2.2.1", optional = true }
praw = { version = "^7.7.1", optional = true }

# Data science and analytics tools
rouge = { version = "^1.0.1", optional = true }
aiosqlite = { version = "^0.20.0", optional = true }
textblob = { version = "^0.17.1", optional = true }
datacommons = { version = "^1.4.3", optional = true }
datacommons_pandas = { version = "^0.0.3", optional = true }
pandas = { version = "^1.5.3", optional = true }
openbb = { version = "^4.3.5", optional = true }
stripe = { version = "^11.3.0", optional = true }

# Research tools
scholarly = { extras = ["tor"], version = "1.7.11", optional = true }
arxiv = { version = "^2.1.3", optional = true }
arxiv2text = { version = "^0.1.14", optional = true }

# Development tools
outlines = { version = "^0.1.7", optional = true }
docker = { version = "^7.1.0", optional = true }
jupyter_client = { version = "^8.6.2", optional = true }
ipykernel = { version = "^6.0.0", optional = true }
agentops = { version = "^0.3.21", optional = true }
e2b-code-interpreter = { version = "^1.0.3", optional = true }
tree-sitter-python = { version = "^0.23.6", optional = true }
tree-sitter = { version = "^0.23.2", optional = true }
pyyaml = { version = "^6.0.2", optional = true }

# Testing tools
pytest = { version = "^7", optional = true }
pytest-asyncio = { version = "^0.23.0", optional = true }
mock = { version = "^5", optional = true}

[tool.poetry.extras]
test = ["pytest", "mock", "pytest-asyncio"]

# Core RAG components
rag = [
    "sentence-transformers",
    "qdrant-client",
    "pymilvus",
    "neo4j",
    "nebula3-python",
    "rank-bm25",
    "cohere",
    "unstructured",
    "pandasai",
]

# Web and API tools
web_tools = [
    "duckduckgo-search",
    "wikipedia",
    "firecrawl-py",
    "apify_client",
    "linkup-sdk",
    "wolframalpha",
    "tavily-python",
    "dappier",
    "asknews",
    "newspaper3k",
    "pyowm",
    "googlemaps",
    "requests_oauthlib",
    "sympy",
]

# Document processing tools
document_tools = [
    "beautifulsoup4",
    "docx2txt", 
    "PyMuPDF",
    "pdfplumber",
    "unstructured",
    "pandasai",
    "prance",
    "openapi-spec-validator",
]

# Media processing tools
media_tools = [
    "imageio",
    "pillow",
    "pydub",
    "yt-dlp",
    "ffmpeg-python",
]

# Communication platform tools
communication_tools = [
    "slack-sdk",
    "slack-bolt",
    "pygithub",
    "pyTelegramBotAPI",
    "discord.py",
    "notion-client",
    "praw",
]

# Data science and analytics tools
data_tools = [
    "pandas",
    "textblob",
    "datacommons",
    "datacommons_pandas",
    "rouge",
    "aiosqlite",
    "openbb",
    "stripe",
]

# Academic and research tools
research_tools = [
    "arxiv",
    "arxiv2text",
    "scholarly",
]

# Development and runtime tools
dev_tools = [
    "docker",
    "jupyter_client",
    "ipykernel",
    "agentops",
    "e2b-code-interpreter",
    "tree-sitter-python",
    "tree-sitter",
]

# Model platforms
model_platforms = [
    "litellm",
    "mistralai",
    "reka-api",
    "anthropic",
    "cohere",
    "fish-audio-sdk",
    "sglang",
]

# Hugging Face ecosystem
huggingface = [
    "transformers",
    "diffusers",
    "accelerate",
    "datasets",
    "torch",
    "soundfile",
    "sentencepiece",
    "opencv-python",
]

# Storage solutions
storage = [
    # Vector databases
    "qdrant-client",
    "pymilvus",
    # Graph storage
    "neo4j",
    "nebula3-python",
    # Key-value storage
    "redis",
    # Object storage
    "azure-storage-blob",
    "google-cloud-storage",
    "botocore",
]

# All inclusive
all = [
    "transformers",
    "diffusers",
    "accelerate",
    "datasets",
    "torch",
    "soundfile",
    "sentencepiece",
    "opencv-python",
    "beautifulsoup4",
    "docx2txt",
    "PyMuPDF",
    "pdfplumber",
    "unstructured",
    "pandasai",
    "wikipedia",
    "linkup-sdk",
    "duckduckgo-search",
    "newspaper3k",
    "wolframalpha",
    "sympy",
    "pyowm",
    "googlemaps",
    "requests_oauthlib",
    "prance",
    "openapi-spec-validator",
    "rouge",
    "aiosqlite",
    "outlines",
    "e2b-code-interpreter",
    "firecrawl-py",
    "arxiv",
    "arxiv2text",
    "imageio",
    "pillow",
    "slack-sdk",
    "slack-bolt",
    "pydub",
    "pygithub",
    "pyTelegramBotAPI",
    "discord.py",
    "docker",
    "jupyter_client",
    "ipykernel",
    "agentops",
    "praw",
    "textblob",
    "asknews",
    "scholarly",
    "notion-client",
    "yt-dlp",
    "ffmpeg-python",
    "datacommons",
    "datacommons_pandas",
    "tavily-python",
    "apify_client",
    "stripe",
    "pandas",
    "tree-sitter-python",
    "tree-sitter",
    "openbb",
    "qdrant-client",
    "pymilvus",
    "cohere",
    "sentence-transformers",
    "neo4j",
    "nebula3-python",
    "rank-bm25",
    "litellm",
    "mistralai",
    "fish-audio-sdk",
    "anthropic",
    "reka-api",
    "sglang",
    "redis",
    "azure-storage-blob",
    "google-cloud-storage",
    "botocore",
    "dappier",
]

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
ruff = "^0.7"
mypy = "^1.5.1"
toml = ">=0.10.2"
pre-commit = "^3"
pytest = "^7"
pytest-cov = "^4"
pytest-asyncio = "^0.23.0"
gradio = "^3"
mock = "^5"

# types
types-Pillow = "*"
types-Pygments = "*"
types-mock = "*"
types-regex = "*"
types-setuptools = "*"
types-tqdm = "*"
types-colorama = "^0"
types-requests = "^2"
types-PyYAML = "^6"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = "^7"
sphinx_book_theme = "*"
docutils = "<0.20.0"
myst-parser = "*"
nbsphinx = "*"
sphinxext-rediraffe = "^0.2.7"

[tool.ruff]
line-length = 79
fix = true
target-version = "py39"

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
extend-select = [
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "PGH", # pygrep-hooks
    "RUF", # ruff
    "E",
]

ignore = [
    "B028", # Warning without stacklevel
    "B904", # use 'raise ... from err'
    "B905", # use explicit 'strict=' parameter with 'zip()'
    "N818", #  Exception name should be named with an Error suffix
    "C416", # I think comprehension is more clear https://docs.astral.sh/ruff/rules/unnecessary-comprehension/
    "C408", # we have used lots of dict(...) instead of literal
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["camel"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--strict-markers"]
markers = [
    "asyncio: mark a test as asyncio-based.",
    "very_slow: mark a very slow test to run only in full test mode",
    "model_backend: for tests that require OpenAI API key or a local LLM",
]

[tool.coverage.report]
include_namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "packaging.*",
    "tiktoken",
    "openai",
    "openai.error",
    "anthropic",
    "pytest",
    "psutil",
    "_pytest.config",
    "_pytest.nodes",
    "numpy",
    "torch",
    "sqlalchemy",
    "google.cloud.sql.connector",
    "gradio",
    "database_connection",
    "huggingface_hub",
    "huggingface_hub.utils._errors",
    "huggingface_hub.errors",
    "wikipedia",
    "linkup-sdk",
    "duckduckgo_search",
    "newspaper",
    "wolframalpha",
    "pyowm",
    "googlemaps",
    "requests_oauthlib",
    "prance",
    "openapi-spec-validator",
    "jsonschema.*",
    "bs4.*",
    "docx2txt",
    "PyMuPDF",
    "fitz",
    "qdrant_client.*",
    "unstructured.*",
    "rouge",
    "aiosqlite",
    "e2b_code_interpreter",
    "firecrawl",
    "imageio",
    "rank_bm25",
    "cohere",
    "fish_audio_sdk",
    "sentence_transformers.*",
    "pymilvus",
    "pillow",
    "slack-sdk",
    "slack-bolt",
    "pydub",
    "pygithub",
    "litellm",
    "pyTelegramBotAPI",
    "dappier",
    "discord.py",
    "docker.*",
    "google.*",
    "google_generativeai",
    "mistralai",
    "cohere",
    "fish-audio-sdk",
    "reka-api",
    "sglang",
    "agentops",
    "botocore.*",
    "asknews",
    "arxiv",
    "arxiv2text",
    "praw",
    "textblob",
    "datacommons",
    "datacommons_pandas",
    "tavily-python",
    "scholarly",
    "notion-client",
    "ffmpeg",
    "yt_dlp",
    "datasets",
    "pandas",
    "tree-sitter-python",
    "tree-sitter",
    "pandasai",
    "sympy",
]
ignore_missing_imports = true